src/tests/fixtures/field_values/OptionalStringFieldKillsParentOnException.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class SomeType {
  /**
   * @gqlField
   * @killsParentOnException
   */
  hello(): string | null {
    return "Hello world!";
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_values/OptionalStringFieldKillsParentOnException.invalid.ts:5:6 - error: Unexpected `@killsParentOnException` tag on field typed as nullable. `@killsParentOnException` will force a field to appear as non-nullable in the schema, so it's implementation must also be non-nullable. .

5    * @killsParentOnException
       ~~~~~~~~~~~~~~~~~~~~~~~
6    */
  ~~~
